--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
 }
