--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 }
 repositories {
     jcenter()
+    maven { url "https://jitpack.io" }
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -36,4 +37,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
+    compile 'com.github.AhmadNemati:WindView:1.1.1'
 }
