--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.baoyz.pullrefreshlayout:library:1.2.0'
     compile 'com.github.AhmadNemati:WindView:1.1.1'
+    compile 'com.github.andy6804tw:SunView-lib:0.1.1'
 }
