--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main3Activity">
+        <activity android:name=".LoadingSplash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,6 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".WeatherNow.WeatherNowActivity" />
         <activity android:name=".Pm25Activity" />
-        <activity android:name=".LoadingSplash.SplashActivity"></activity>
     </application>
 
 </manifest>
