1.新增Settings並使用SettingView(建置完成) 2.WeatherNow頁面刷新bug解決mAlpha=0

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".WeatherNow.WeatherNowActivity" />
         <activity android:name=".Pm25Activity" />
+        <activity android:name=".Settings.SettingsActivity"></activity>
     </application>
 
 </manifest>
