--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,10 @@
         </activity>
         <activity android:name=".Main2Activity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".WeatherNow.WeatherNowActivity" />
+        <activity android:name=".WeatherNowActivity.WeatherNowActivity" />
         <activity android:name=".Pm25Activity" />
-        <activity android:name=".Settings.SettingsActivity"></activity>
+        <activity android:name=".Settings.SettingsActivity" />
+        <activity android:name=".UVIActivity.UVIActivity"></activity>
     </application>
 
 </manifest>
