--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoadingSplash.SplashActivity">
+        <activity android:name=".WellcomeActivity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +24,8 @@
         <activity android:name=".WeatherNowActivity.WeatherNowActivity" />
         <activity android:name=".Pm25Activity" />
         <activity android:name=".Settings.SettingsActivity" />
-        <activity android:name=".UVIActivity.UVIActivity"></activity>
+        <activity android:name=".UVIActivity.UVIActivity" />
+        <activity android:name=".LoadingSplash.SplashActivity"></activity>
     </application>
 
 </manifest>
