1.建立AirMainActivity使用navigationtabbar下方滑動搭配Fragment(AQI、PM2.5、AIR) 2.AQIFragment設計完成(尚未連棟資料)，使用DashboardView計量表顯示數值

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,7 @@ dependencies {
     compile 'com.github.pwittchen:weathericonview:1.1.0'
     compile 'me.drakeet:breathingviewhelper:1.0.0'
     compile 'com.kaopiz:kprogresshud:1.0.5'
+    compile 'com.github.SuperKung:DashboardView:1.2.1'
+    compile 'devlight.io:navigationtabbar:1.2.5'
     testCompile 'junit:junit:4.12'
 }
