PM25Fragment設計完成(尚未連動)，環境資料改成AirMainActivity讀取

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,6 @@ dependencies {
     compile 'com.kaopiz:kprogresshud:1.0.5'
     compile 'com.github.SuperKung:DashboardView:1.2.1'
     compile 'devlight.io:navigationtabbar:1.2.5'
+    compile 'com.github.lzyzsd:circleprogress:1.2.1'
     testCompile 'junit:junit:4.12'
 }
